moved some common functionality to a separate project

--- a/LunarTransgression/LunarTransgressionMain/WebContent/public/admin_serverstatus.xhtml
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/public/admin_serverstatus.xhtml
@@ -7,5 +7,5 @@
 	xmlns:of="http://omnifaces.org/functions"
     xmlns:c="http://java.sun.com/jsp/jstl/core">
 
-	SOON to be done
+	<h:outputText value="SOON to be done"/>
 </html>
