--- a/LunarTransgression/LunarTransgressionMain/WebContent/public/admin.xhtml
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/public/admin.xhtml
@@ -51,7 +51,7 @@
 									<p:graphicImage library="translune" name="ajaxloadingbar.gif" />
 								</p:dialog>
 								<h:form id="admin_form">
-									<p:messages id="messages" autoUpdate="true" />
+									<p:messages id="messages" autoUpdate="true" showDetail="true" showSummary="true"/>
 									<ui:include src="#{adminBean.page.path}" />
 								</h:form>							
 							</p:outputPanel>
