--- a/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
@@ -9,11 +9,13 @@
 		
 		<link rel="stylesheet" href="css/styles.css?v=1.0">
 		<script src="querystring.js"></script>
-		<script src="../pixijs/pixi.js"></script>		
+		<script src="../pixijs/pixi.js"></script>
+		<script src="../howler/howler.js"></script>				
 		<script src="game.js"></script>
 	</head>
 	
 	<body>
 		<div id ="game_div">loading...</div>
+		<script src="bootstrap.js"></script>
 	</body>
 </html>
