--- a/LunarTransgression/LunarTransgressionMain/WebContent/public/admin_manage.xhtml
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/public/admin_manage.xhtml
@@ -6,10 +6,19 @@
 	xmlns:of="http://omnifaces.org/functions"
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
 
-	<p:fieldset legend="Import">
+	<p:fieldset legend="Import characters, items, and skills">
+		
+        <h:panelGrid columns="2" cellpadding="5">
+            <h:outputLabel for="empty_db" value="Empty database before import" />
+			<p:inputSwitch id="empty_db" value="#{manageBean.emptyDatabase}" immediate="true">
+				<p:ajax event="change" listener="#{manageBean.onEmptyDatabaseChange}"></p:ajax>			
+			</p:inputSwitch>
+		</h:panelGrid>
+		
 		<p:fileUpload fileUploadListener="#{manageBean.handleImportUpload}"
 			mode="advanced" dragDropSupport="true" update="messages" auto="true"
+			onstart="PF('statusDialog').show()" oncomplete="PF('statusDialog').hide()" 
 			allowTypes="/(\.|\/)(zip)$/">
-		</p:fileUpload>
+		</p:fileUpload>		
 	</p:fieldset>
 </html>
