start pixijs, setup

--- a/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
@@ -7,12 +7,13 @@
 		<meta name="description" content="The HTML5 Herald">
 		<meta name="author" content="SitePoint">
 		
-		<link rel="stylesheet" href="css/styles.css?v=1.0">
+		<link rel="stylesheet" href="styles.css">
 		<script src="querystring.js"></script>
 		<script src="../pixijs/pixi.js"></script>
 		<script src="../howler/howler.js"></script>
-		<script src="priority-queue.js"></script>				
+		<script src="utils.js"></script>		
 		<script src="net.js"></script>
+		<script src="scenes.js"></script>
 		<script src="game.js"></script>
 	</head>
 	
