--- a/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
@@ -11,13 +11,15 @@
 		<script src="querystring.js"></script>
 		<script src="../pixijs/pixi.js"></script>
 		<script src="../howler/howler.js"></script>
+		<script src="pixininepatch.js"></script>		
 		<script src="utils.js"></script>		
 		<script src="net.js"></script>
-		<script src="scenes.js"></script>
+		<script src="scenebase.js"></script>
+		<script src="scenemenu.js"></script>
 		<script src="game.js"></script>
 	</head>
 	
-	<body>
+	<body unselectable="on" style="-moz-user-select: none; -webkit-user-select: none; user-select: none">
 		<div id ="game_div">loading...</div>
 		<script src="bootstrap.js"></script>
 	</body>
