--- a/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
@@ -11,7 +11,8 @@
 		<script src="querystring.js"></script>
 		<script src="../pixijs/pixi.js"></script>
 		<script src="../howler/howler.js"></script>
-		<script src="pixininepatch.js"></script>		
+		<script src="pixininepatch.js"></script>
+		<script src="pixiparticles.js"></script>		
 		<script src="utils.js"></script>		
 		<script src="net.js"></script>
 		<script src="scenebase.js"></script>
@@ -19,7 +20,7 @@
 		<script src="game.js"></script>
 	</head>
 	
-	<body unselectable="on" style="-moz-user-select: none; -webkit-user-select: none; user-select: none">
+	<body class="windowed" unselectable="on" style="-moz-user-select: none; -webkit-user-select: none; user-select: none">
 		<div id ="game_div">loading...</div>
 		<script src="bootstrap.js"></script>
 	</body>
