babel + uglify, music+images to db

--- a/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
@@ -10,9 +10,9 @@
 		<link rel="stylesheet" href="styles.css">
 		<script src="querystring.js"></script>
 		<script src="../pixijs/pixi.js"></script>
+		<script src="./pixijs/pixiparticles.js"></script>
 		<script src="../howler/howler.js"></script>
-		<script src="pixininepatch.js"></script>
-		<script src="pixiparticles.js"></script>		
+		<script src="pixininepatch.js"></script>		
 		<script src="utils.js"></script>		
 		<script src="net.js"></script>
 		<script src="scenebase.js"></script>
