--- a/LunarTransgression/LunarTransgressionMain/WebContent/public/index.xhtml
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/public/index.xhtml
@@ -23,8 +23,8 @@
 								required="true" />
 						</h:panelGrid>
 						<p:separator />
-						<p:commandButton actionListener="#{sessionBean.login}" value="Play" icon="ui-icon-check"/>
-						<p:link id="goto_register" value="Register" outcome="register"/>
+						<p:commandButton actionListener="#{sessionBean.login}" value="Enter" icon="ui-icon-home"/>
+						<p:button id="goto_register" value="Register" icon="ui-icon-circle-plus" outcome="register"></p:button>
 					</h:form>
 				</p:layoutUnit>
 			</p:layout>
