--- a/LunarTransgression/LunarTransgressionMain/WebContent/public/player.xhtml
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/public/player.xhtml
@@ -9,7 +9,7 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
 	<ui:composition template="/WEB-INF/template/common.xhtml">
 		<ui:define name="header">
-			<h:outputScript library="translune" name="game.js"></h:outputScript>
+			<h:outputScript library="translune" name="startgame.js"></h:outputScript>
 		</ui:define>
 		<ui:define name="pageTitle">Login</ui:define>
 		<ui:define name="mainContent">
@@ -20,7 +20,9 @@
 						<o:importConstants type="com.github.blutorange.translune.gui.EUserType" />
 						<c:choose>		
 							<c:when test="#{sessionBean.userType == EUserType.PLAYER}">
-							<p:commandLink value="Start game" actionListener="#{playerBean.startGame()}" partialSubmit="true" update="messages"></p:commandLink>
+								<p:commandButton value="Start game"
+									actionListener="#{playerBean.startGame()}" icon="ui-icon-play"
+									partialSubmit="true" update="messages" />
 							</c:when>
 							<c:otherwise>
 								<p>ACCESS_DENIED</p>
