--- a/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
@@ -8,10 +8,11 @@
 		<meta name="author" content="SitePoint">
 		
 		<link rel="stylesheet" href="styles.css">
-		<script src="querystring.js"></script>
+		<script src="../polyfill/polyfill.js"></script>
 		<script src="../pixijs/pixi.js"></script>
-		<script src="./pixijs/pixiparticles.js"></script>
+		<script src="../pixijs/pixiparticles.js"></script>
 		<script src="../howler/howler.js"></script>
+		<script src="querystring.js"></script>
 		<script src="pixininepatch.js"></script>		
 		<script src="utils.js"></script>		
 		<script src="net.js"></script>
