char select +details

--- a/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
@@ -18,6 +18,8 @@
 		<script src="net.js"></script>
 		<script src="scenebase.js"></script>
 		<script src="scenemenu.js"></script>
+		<script src="scenemenuchar.js"></script>
+		<script src="scenemenuchardetails.js"></script>
 		<script src="game.js"></script>
 	</head>
 	
