--- a/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
@@ -13,10 +13,13 @@
 		<script src="../pixijs/pixiparticles.js"></script>
 		<script src="../howler/howler.js"></script>
 		<script src="querystring.js"></script>
-		<script src="pixininepatch.js"></script>		
+		<script src="pixininepatch.js"></script>
+		<script src="pixitextinput.js"></script>
+		<script src="pixitween.js"></script>
 		<script src="utils.js"></script>		
 		<script src="net.js"></script>
 		<script src="scenebase.js"></script>
+		<script src="sceneskillselect.js"></script>
 		<script src="scenemenu.js"></script>
 		<script src="scenemenuchar.js"></script>
 		<script src="scenemenuchardetails.js"></script>
