--- a/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
@@ -13,6 +13,7 @@
 		<script src="../pixijs/pixiparticles.js"></script>
 		<script src="../howler/howler.js"></script>
 		<script src="querystring.js"></script>
+		<script src="pixiclipcontainer.js"></script>
 		<script src="pixininepatch.js"></script>
 		<script src="pixitextinput.js"></script>
 		<script src="pixitween.js"></script>
