--- a/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
@@ -24,6 +24,8 @@
 		<script src="scenemenu.js"></script>
 		<script src="scenemenuchar.js"></script>
 		<script src="scenemenuchardetails.js"></script>
+		<script src="scenemenuinvite.js"></script>
+		<script src="scenemenuinvitedetails.js"></script>
 		<script src="game.js"></script>
 	</head>
 	
