--- a/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game_debug.html
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game_debug.html
@@ -12,7 +12,21 @@
 		<script src="../pixijs/pixi.js"></script>
 		<script src="../pixijs/pixiparticles.js"></script>
 		<script src="../howler/howler.js"></script>
-		<script src="../translune.min.js"></script>
+		<script src="000-querystring.js"></script>
+		<script src="005-utils.js"></script>		
+		<script src="010-net.js"></script>
+		<script src="020-game.js"></script>
+		<script src="030-pixiclipcontainer.js"></script>
+		<script src="030-pixininepatch.js"></script>
+		<script src="030-pixitextinput.js"></script>
+		<script src="030-pixitween.js"></script>
+		<script src="040-scenebase.js"></script>
+		<script src="045-sceneskillselect.js"></script>
+		<script src="045-scenemenu.js"></script>
+		<script src="045-scenemenuchar.js"></script>
+		<script src="045-scenemenuchardetails.js"></script>
+		<script src="045-scenemenuinvite.js"></script>
+		<script src="045-scenemenuinvitedetails.js"></script>
 	</head>
 	
 	<body class="windowed" unselectable="on" style="-moz-user-select: none; -webkit-user-select: none; user-select: none">
