--- a/LunarTransgression/LunarTransgressionMain/WebContent/public/register.xhtml
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/public/register.xhtml
@@ -16,7 +16,7 @@
 						<h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5"
 							columnClasses="label, value">
 							<p:outputLabel for="username" value="Username" />
-							<p:inputText id="username" value="#{sessionBean.username}"
+							<p:inputText id="username" value="#{sessionBean.username}" maxlength="16"
 								required="true" />
 							<p:outputLabel for="password" value="Password" />
 							<p:password id="password" value="#{sessionBean.password}"
