invitation almost done

--- a/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game_debug.html
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game_debug.html
@@ -27,6 +27,8 @@
 		<script src="045-scenemenuchardetails.js"></script>
 		<script src="045-scenemenuinvite.js"></script>
 		<script src="045-scenemenuinvitedetails.js"></script>
+		<script src="045-sceneinviteconfirm.js"></script>
+		<script src="045-scenemenubattleprep.js"></script>
 	</head>
 	
 	<body class="windowed" unselectable="on" style="-moz-user-select: none; -webkit-user-select: none; user-select: none">
