--- a/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game.html
@@ -8,9 +8,13 @@
 		<meta name="author" content="blutorange">
 		
 		<link rel="stylesheet" href="styles.css">
+		<script src="../fmath/fmath.js"></script>
+		<script src="../glmatrix/glmatrix.js"></script>
 		<script src="../polyfill/polyfill.js"></script>
 		<script src="../pixijs/pixi.js"></script>
 		<script src="../pixijs/pixiparticles.js"></script>
+		<script src="../pixijs/pixidisplay.js"></script>
+		<script src="../pixijs/pixiprojection.js"></script>
 		<script src="../howler/howler.js"></script>
 		<script src="../translune.min.js"></script>
 	</head>
