--- a/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game_debug.html
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game_debug.html
@@ -8,10 +8,15 @@
 		<meta name="author" content="blutorange">
 		
 		<link rel="stylesheet" href="styles.css">
+		<script src="../fmath/fmath.js"></script>
+		<script src="../glmatrix/glmatrix.js"></script>
 		<script src="../polyfill/polyfill.js"></script>
 		<script src="../pixijs/pixi.js"></script>
 		<script src="../pixijs/pixiparticles.js"></script>
+		<script src="../pixijs/pixidisplay.js"></script>
+		<script src="../pixijs/pixiprojection.js"></script>
 		<script src="../howler/howler.js"></script>
+		
 		<script src="000-querystring.js"></script>
 		<script src="005-utils.js"></script>		
 		<script src="010-net.js"></script>
@@ -20,6 +25,7 @@
 		<script src="030-pixininepatch.js"></script>
 		<script src="030-pixitextinput.js"></script>
 		<script src="030-pixitween.js"></script>
+		<script src="030-pixicube.js"></script>
 		<script src="040-scenebase.js"></script>
 		<script src="045-sceneskillselect.js"></script>
 		<script src="045-scenemenu.js"></script>
@@ -30,6 +36,7 @@
 		<script src="045-sceneinviteconfirm.js"></script>
 		<script src="045-scenemenubattleprep.js"></script>
 		<script src="046-scenebattle.js"></script>
+		<script src="046-scenebattletext.js"></script>
 	</head>
 	
 	<body class="windowed" unselectable="on" style="-moz-user-select: none; -webkit-user-select: none; user-select: none">
