--- a/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game_debug.html
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game_debug.html
@@ -37,6 +37,8 @@
 		<script src="045-scenemenubattleprep.js"></script>
 		<script src="046-scenebattle.js"></script>
 		<script src="046-scenebattletext.js"></script>
+		<script src="046-scenebattlebattler.js"></script>
+		<script src="046-scenebattlecurtain.js"></script>
 	</head>
 	
 	<body class="windowed" unselectable="on" style="-moz-user-select: none; -webkit-user-select: none; user-select: none">
