battle prep halfway done

--- a/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game_debug.html
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game_debug.html
@@ -39,6 +39,13 @@
 		<script src="046-scenebattletext.js"></script>
 		<script src="046-scenebattlebattler.js"></script>
 		<script src="046-scenebattlecurtain.js"></script>
+		<script src="046-scenebattlelogoin.js"></script>
+		<script src="046-scenebattlelogoout.js"></script>
+		<script src="046-scenebattleopponentwiggle.js"></script>
+		<script src="046-scenebattleuiin.js"></script>
+		<script src="046-scenebattleopponentout.js"></script>
+		<script src="046-scenebattlecharin.js"></script>
+		<script src="046-scenebattlecharshow.js"></script>
 	</head>
 	
 	<body class="windowed" unselectable="on" style="-moz-user-select: none; -webkit-user-select: none; user-select: none">
