--- a/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game_debug.html
+++ b/LunarTransgression/LunarTransgressionMain/WebContent/resources/translune/game_debug.html
@@ -49,6 +49,8 @@
 		<script src="046-scenebattleactionselect.js"></script>
 		<script src="046-scenebattletargetselect.js"></script>
 		<script src="046-scenebattleko.js"></script>
+		<script src="046-scenebattlewinlosein.js"></script>
+		<script src="046-scenebattleloot.js"></script>
 	</head>
 	
 	<body class="windowed" unselectable="on" style="-moz-user-select: none; -webkit-user-select: none; user-select: none">
